# kairos

./: .dockerignore  .gitignore  Cargo.toml  README.md  config.example.toml  design.md  flake.nix
.cargo/: audit.toml  deny.toml
.github/actions/setup-apt-dependencies/: action.yml
.github/workflows/: ci.yaml  consensus-e2e-nightly.yaml  consensus-perf-nightly.yaml  release.yaml  security.yaml
assets/: kairos-logo-animated.html
bootstrap-rpc/: Cargo.toml  build.rs
bootstrap-rpc/proto/bootstrap/v1/: bootstrap.proto
bootstrap-rpc/src/: lib.rs  service.rs
consensus/: Cargo.toml
consensus/benches/: block_validation.rs  mempool_proposal.rs  pending_state.rs
consensus/ci/: PERF_GATE.md  log_policy.sh  perf_baseline.sh  perf_thresholds.sh
consensus/src/: consensus.rs  lib.rs  main.rs  metrics.rs
consensus/src/consensus_manager/: config.rs  consensus_engine.rs  events.rs  leader_manager.rs  mod.rs  state_machine.rs  utils.rs  view_chain.rs  view_context.rs  view_manager.rs
consensus/src/crypto/: aggregated.rs  mod.rs  transaction_crypto.rs
consensus/src/mempool/: service.rs
consensus/src/state/: account.rs  block.rs  leader.rs  mod.rs  notarizations.rs  nullify.rs  peer.rs  transaction.rs  view.rs
consensus/src/storage/: conversions.rs  store.rs  tables.rs
consensus/src/tests/: e2e_consensus.rs  mod.rs  network_simulator.rs  perf_consensus.rs  test_helpers.rs
consensus/src/validation/: mod.rs  pending_state.rs  service.rs  types.rs  validator.rs
consensus/src/view_manager/: config.rs  events.rs  leader_manager.rs  manager.rs  mod.rs  utils.rs
crypto/: Cargo.toml  README.md
crypto/src/: consensus_bls.rs  dkg.rs  error.rs  lib.rs  main.rs  polynomial.rs  scalar.rs  threshold.rs  threshold_math.rs  threshold_setup.rs
crypto/src/bls/: constants.rs  mod.rs  ops.rs
deployments/: Dockerfile  README.md  docker-compose.yml
deployments/alloy/: config.alloy
deployments/config/: node.toml
deployments/grafana/dashboards/: consensus.json
deployments/grafana/provisioning/dashboards/: dashboards.yml
deployments/localnet/: docker-compose.yml  generate-keys.sh  localnet.override.yml  prometheus.yml
deployments/loki/: loki.yml
deployments/prometheus/: alerts.yml  prometheus.yml
deployments/scripts/: backup.sh  healthcheck.sh  restore.sh
docs/: bls-consensus-migration-plan.md  p2p-discovery.md  rpc-node.md
grpc-client/: Cargo.toml
grpc-client/proto/minimmit/v1/: consensus.proto  transaction.proto
grpc-client/src/: server.rs
grpc-client/src/services/: account.rs  admin.rs  block.rs  consensus.rs  node.rs  subscription.rs  transaction.rs
grpc-client/tests/: test_helpers.rs
nix/: devshell.nix  docker.nix  package.nix
node/: Cargo.toml
node/config/: README.md  node0.toml  node1.toml  node2.toml  node3.toml  node4.toml  node5.toml  run-local-network.sh
node/src/: bootstrap_client.rs  config.rs  lib.rs  main.rs  node.rs
p2p/: Cargo.toml
p2p/src/: config.rs  error.rs  identity.rs  lib.rs  message.rs  network.rs  peer.rs  service.rs
p2p/src/protocols/: consensus.rs  gossip.rs  mod.rs  sync.rs
p2p/tests/: network_integration.rs  service_integration.rs
rpc/src/: config.rs  grpc.rs  lib.rs  main.rs  p2p.rs  sync.rs
scripts/ci/: run_consensus_e2e_repeated.sh  run_consensus_perf_gate.sh  run_consensus_perf_localnet_gate.sh
sdk/: Cargo.toml
sdk/examples/: transfer.rs
sdk/src/: client.rs  lib.rs  wallet.rs
sdk/src/transaction/: builder.rs
tests/: Cargo.toml
tests/benches/: bls_impl_compare.rs
tests/src/: lib.rs  threshold_support.rs
tests/src/e2e_consensus/: scenarios.rs
tests/src/e2e_rpc/: scenarios.rs
tests/src/gossip/: helpers.rs  mod.rs  scenarios.rs
visualizer/: Cargo.toml
visualizer/src/: lib.rs  server.rs
visualizer/src/static/: app.js  index.html  style.css
