[workspace]
members  = [ "consensus", "crypto", "p2p", "storage", "utils" ]
resolver = "3"

[workspace.dependencies]
anyhow        = "1.0.100"
arc-swap      = "1.7.1"
ark-bls12-381 = "0.5.0"
ark-ec        = "0.5.0"
ark-ff        = "0.5.0"
ark-serialize = "0.5.0"
blake3        = "1.8.2"
ed25519-dalek = "2.2.0"
figment       = "0.10.19"
hex           = "0.4.3"
metrics       = "0.24.2"
rand          = "0.8.5"
rand_core     = "0.9.3"
redb          = "3.1.0"
rkyv          = "0.8.12"
rtrb          = "0.3.2"
serde         = "1.0.228"
slog          = "2.8.2"
slog-async    = "2.8.0"
slog-stdlog   = "4.1.1"
slog-term     = "2.9.2"
tempfile      = "3.23.0"
thiserror     = "2.0.17"
tracing       = "0.1.41"
validator     = "0.20.0"
zeroize       = "1.8.2"
