[workspace]
members  = [ "consensus", "crypto", "grpc-client", "node", "p2p", "storage", "tests", "utils" ]
resolver = "3"

[workspace.dependencies]
anyhow                  = "1.0.100"
arc-swap                = "1.7.1"
ark-bls12-381           = "0.5.0"
ark-ec                  = "0.5.0"
ark-ff                  = "0.5.0"
ark-serialize           = "0.5.0"
blake3                  = "1.8.2"
bytes                   = "1.11.0"
commonware-codec        = "0.0.64"
commonware-cryptography = "0.0.64"
commonware-p2p          = "0.0.64"
commonware-runtime      = "0.0.64"
commonware-utils        = "0.0.64"
consensus               = { path = "./consensus" }
crossbeam               = "0.8.4"
ed25519-dalek           = "2.2.0"
figment                 = "0.10.19"
futures                 = "0.3.31"
governor                = "0.10.4"
grpc-client             = { path = "./grpc-client" }
hex                     = "0.4.3"
metrics                 = "0.24.2"
p2p                     = { path = "./p2p" }
prost                   = "0.14.3"
prost-types             = "0.14.3"
rand                    = "0.8.5"
rand_core               = "0.9.3"
rayon                   = "1.11.0"
redb                    = "3.1.0"
rkyv                    = "0.8.12"
rtrb                    = "0.3.2"
serde                   = "1.0.228"
serde_json              = "1.0.149"
slog                    = "2.8.2"
slog-async              = "2.8.0"
slog-stdlog             = "4.1.1"
slog-term               = "2.9.2"
tempfile                = "3.23.0"
thiserror               = "2.0.17"
tokio                   = { version = "1.45.1", features = [ "full" ] }
tokio-stream            = "0.1.18"
tonic                   = "0.14.2"
tonic-build             = "0.14.2"
tonic-prost             = "0.14.2"
tonic-prost-build       = "0.14.2"
tracing                 = "0.1.41"
tracing-subscriber      = "0.3.19"
validator               = "0.20.0"
zeroize                 = "1.8.2"
