[package]
edition = "2024"
name    = "bootstrap-rpc"
version = "0.1.0"

[dependencies]
anyhow      = { workspace = true }
crypto      = { workspace = true }
hex         = { workspace = true }
prost       = { workspace = true }
rand        = { workspace = true }
serde       = { workspace = true, features = [ "derive" ] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true, features = [ "macros", "rt", "sync" ] }
tonic       = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
