[package]
edition = "2024"
name    = "consensus"
version = "0.1.0"

[dependencies]
anyhow        = { workspace = true }
ark-bls12-381 = { workspace = true, features = [ "curve" ] }
ark-ec        = { workspace = true }
ark-ff        = { workspace = true }
ark-serialize = { workspace = true }
blake3        = { workspace = true }
figment       = { workspace = true, features = [ "env", "toml", "yaml" ] }
hex           = { workspace = true }
metrics       = { workspace = true }
rand          = { workspace = true, features = [ "std" ] }
redb          = { workspace = true }
rkyv          = { workspace = true }
rtrb          = { workspace = true }
serde         = { workspace = true, features = [ "derive" ] }
slog          = { workspace = true }
slog-async    = { workspace = true }
slog-stdlog   = { workspace = true }
slog-term     = { workspace = true }
tempfile      = { workspace = true }
tracing       = { workspace = true }
validator     = { workspace = true, features = [ "derive" ] }
