[package]
edition = "2024"
name    = "consensus"
version = "0.1.0"

[dependencies]
anyhow        = { workspace = true }
arc-swap      = { workspace = true }
ark-bls12-381 = { workspace = true, features = [ "curve" ] }
ark-ec        = { workspace = true }
ark-ff        = { workspace = true }
ark-serialize = { workspace = true }
blake3        = { workspace = true }
ed25519-dalek = { workspace = true, features = [ "batch", "rand_core" ] }
figment       = { workspace = true, features = [ "env", "toml", "yaml" ] }
hex           = { workspace = true }
metrics       = { workspace = true }
rand          = { workspace = true, features = [ "std" ] }
rand_core     = { workspace = true, features = [ "std" ] }
rayon         = { workspace = true }
redb          = { workspace = true }
rkyv          = { workspace = true }
rtrb          = { workspace = true }
serde         = { workspace = true, features = [ "derive" ] }
slog          = { workspace = true }
slog-async    = { workspace = true }
slog-stdlog   = { workspace = true }
slog-term     = { workspace = true }
tempfile      = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = [ "sync" ] }
tracing       = { workspace = true }
validator     = { workspace = true, features = [ "derive" ] }
zeroize       = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name    = "pending_state"

[[bench]]
harness = false
name    = "mempool_proposal"

[[bench]]
harness = false
name    = "block_validation"
