[package]
edition = "2024"
name    = "crypto"
version = "0.1.0"

[dependencies]
anyhow     = { workspace = true }
blake3     = { workspace = true }
blst       = { workspace = true }
hex        = { workspace = true }
rand       = { workspace = true }
rkyv       = { workspace = true }
serde      = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
thiserror  = { workspace = true }
