[package]
edition = "2024"
name    = "grpc-client"
version = "0.1.0"

[dependencies]
anyhow                      = { workspace = true }
ark-serialize               = { workspace = true }
consensus                   = { workspace = true }
crossbeam                   = { workspace = true }
figment                     = { workspace = true, features = [ "env", "toml" ] }
hex                         = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
p2p                         = { workspace = true }
prost                       = { workspace = true }
prost-types                 = { workspace = true }
rtrb                        = { workspace = true }
serde                       = { workspace = true, features = [ "derive" ] }
slog                        = { workspace = true }
thiserror                   = { workspace = true }
tokio                       = { workspace = true, features = [ "full" ] }
tokio-stream                = { workspace = true, features = [ "sync" ] }
tonic                       = { workspace = true }
tonic-prost                 = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
rand         = { workspace = true }
serde_json   = { workspace = true }
tempfile     = { workspace = true }
tokio-stream = { workspace = true }
